--- a/assets/style.css
+++ b/assets/style.css
@@ -136,7 +136,7 @@ ul{
 
 /* Responsiveness */
 
-@media (min-width: 907px) {
+@media (min-width: 990px) {
     .nav{
         max-height: none;
         top: 0;
@@ -192,10 +192,10 @@ ul{
 /* imagem fundo mapa */
 
 .fundo-imagem{
-    background-image: url("images/FotosCEA\ \(2\).jpeg");
+    background-image: url("images/SALE1.jpg");
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
 
@@ -224,7 +224,7 @@ ul{
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding:20px;
 }
 .responsiveItem{
@@ -232,7 +232,17 @@ ul{
     height: 250px;
 }
 
+.responsiveItem3{
+    width: 250px;
+    height: 150px;
+}
+
 .responsiveItem a{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.branco{
     text-decoration: none;
     color: var(--white);
 }
