--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@
 }
 
 body{
-    background-color: var(--black);
+    background-color: var(--white);
     font-family: "Poppins", sans-serif;
 }
 
@@ -28,7 +28,7 @@ ul{
 
 /* Header */
 .header{
-    background-color: var(--black);
+    background-color: var(--white);
     position: sticky;
     top: 0;
     padding-top: 1rem;
@@ -50,7 +50,7 @@ ul{
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: var(--black);
+    background-color: var(--white);
     overflow: hidden;
 }
 
@@ -58,7 +58,7 @@ ul{
     font-size: 1.3rem;
     display: block;
     padding: 30px;
-    color: var(--white);
+    color: var(--black);
 }
 
 .menu a:hover{
@@ -80,7 +80,7 @@ ul{
 
 
 .hamb-line {
-    background: var(--white);
+    background: var(--black);
     display: block;
     height: 2px;
     position: relative;
@@ -90,7 +90,7 @@ ul{
 
 .hamb-line::before,
 .hamb-line::after{
-    background: var(--white);
+    background: var(--black);
     content: '';
     display: block;
     height: 100%;
@@ -180,12 +180,19 @@ ul{
 }
 /* Texto base */
 .texto{
+    color: var(--black);
+    text-align: justify;
+    font-size: 1.3rem;
+}
+
+.textoBranco{
     color: var(--white);
     text-align: justify;
     font-size: 1.3rem;
 }
+
 .textoPequeno{
-    color: var(--white);
+    color: var(--black);
     text-align: justify;
     font-size: 1rem;
 }
@@ -244,12 +251,12 @@ ul{
 
 .responsiveItem a{
     text-decoration: none;
-    color: var(--white);
+    color: var(--black);
 }
 
 .branco{
     text-decoration: none;
-    color: var(--white);
+    color: var(--black);
 }
 
 #qrcode{
