--- a/assets/style.css
+++ b/assets/style.css
@@ -205,7 +205,6 @@ ul{
     background-position: center;
 }
 
-
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -287,4 +286,8 @@ ul{
     border-radius: 50%;
     width: 250px;
     height: 250px;
+}
+
+#imgFooter{
+    position: absolute;
 }
