--- a/assets/style.css
+++ b/assets/style.css
@@ -278,14 +278,29 @@ ul{
     padding:20px;
 }
 .respItemLogo{
+    margin:4px;
     width: 250px;
     height: 100px;
 }
 
 .respItemIcon{
-    border-radius: 50%;
-    width: 250px;
-    height: 250px;
+    min-width: 250px;
+    max-width: 500px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    margin-bottom:30px;
+}
+
+.itemLeft{
+    float: left;
+    width: 40%;
+}
+
+.itemRight{
+    font-size:1rem;
+    float: right;
+    width: 60%;
 }
 
 #imgFooter{
