--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 :root{
-    --white: #f9f9f9;
+    --white: #ffffff;
     --black: #000000;
     --grey: #85888C;
 }
@@ -31,136 +31,90 @@ ul{
     background-color: var(--white);
     position: sticky;
     top: 0;
-    padding-top: 1rem;
     width: 100%;
-    height: 120px;
-    z-index: 2;
-}
-
-/* Logo */
-.logo{
-    position: absolute;
-    left: 5%;
-    width: 250px;
-    height: 70px;
-}
-
-/* Nav menu */
-.nav{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background-color: var(--white);
-    overflow: hidden;
-}
-
-.menu a{
-    font-size: 1.3rem;
-    display: block;
-    padding: 30px;
-    color: var(--black);
-}
-
-.menu a:hover{
-    background-color: var(--grey);
-}
-
-.nav{
-    max-height: 0;
-    transition: max-height .5s ease-out;
-}
-
-/* Menu Icon */
-
-.hamb{
-    cursor: pointer;
-    float: right;
-    padding: 40px 20px;
-}
-
-
-.hamb-line {
-    background: var(--black);
-    display: block;
-    height: 2px;
-    position: relative;
-    width: 24px;
     z-index: 1;
 }
 
-.hamb-line::before,
-.hamb-line::after{
-    background: var(--black);
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
+
+nav {
+    background: rgb(255, 255, 255);
+    color: black;
+    display: flex;
+    justify-content: space-between;
 }
 
-.hamb-line::before{
-    top: 5px;
+nav .mainMenu {
+    display: flex;
+    list-style: none;
 }
 
-.hamb-line::after{
-    top: -5px;
+nav .mainMenu li a{
+    display: inline-block;
+    padding: 15px;
+    padding-top: 35px;
+    text-decoration: none;
+    color: black;
+    font-size: 1.3rem;
 }
 
+nav .mainMenu li a:hover{
+    color: gray;
+}
 
-.side-menu {
+nav .openMenu{
+    font-size: 2rem;
+    margin: 20px;
     display: none;
+    cursor: pointer;
 }
 
-/* Toggle menu icon */
-
-.side-menu:checked ~ nav{
-    max-height: 100%;
+nav .openMenu, .closeMenu, .icons i{
+    font-size:2rem;
+    display: none;
+    cursor: pointer;
 }
 
-.side-menu:checked ~ .hamb .hamb-line {
-    background: transparent;
-}
-
-.side-menu:checked ~ .hamb .hamb-line::before {
-    transform: rotate(-45deg);
-    top:0;
-
-}
-
-.side-menu:checked ~ .hamb .hamb-line::after {
-    transform: rotate(45deg);
-    top:0;
+nav .logo{
+    margin: 6px;
+    margin-left: 20px;
+    font-size: 25px;
+    cursor: pointer;
+    min-width:200px;
+    max-width:300px;
+    display: flex;
 }
 
 
-/* Responsiveness */
-
-@media (min-width: 990px) {
-    .nav{
-        max-height: none;
+@media(max-width: 1088px){
+    nav .mainMenu{
+        height: 100vh;
+        position: fixed;
         top: 0;
-        position: relative;
-        float: right;
-        width: fit-content;
-        background-color: transparent;
-    }
-
-    .menu li{
-        float: left;
-    }
-
-    .menu a:hover{
-        background-color: transparent;
-        color: var(--grey);  
-    }
-    
-    .hamb{
+        left: 0;
+        right: 0;
+        z-index: 2;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: white;
+        transition: top 1s ease;
         display: none;
     }
+    nav .mainMenu .closeMenu{
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+    nav .openMenu{
+        display:block;
+    }
+    nav .mainMenu li a:hover{
+        background: none;
+        color: gray;
+        font-size: 1.6rem;
+    }
 }
-
-
 
 /*////////////////////////// Margem //////////////////////////////*/
 .margem-lado{
