--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ ul{
     position: sticky;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 3;
 }
 
 
@@ -237,6 +237,7 @@ nav .logo{
     flex-flow: wrap;
     justify-content: space-evenly;
     padding:20px;
+    
 }
 .respItemLogo{
     margin:8px;
@@ -305,7 +306,7 @@ nav .logo{
 /*//CARD RESPONSIVO//////////////////////////////////////////*/
 
 .contact-card {
-    width: 80%;
+    width: 90%;
     max-width: 450px;
     margin: 5px;
     padding: 20px;
@@ -357,7 +358,6 @@ nav .logo{
 
     .contact-card .card-image {
         margin-bottom: 0px;
-        
     }
 }
 
@@ -371,4 +371,65 @@ nav .logo{
 
 .fa{
     color: gray !important;
+}
+
+/* novo teste hover information */
+
+.ativa{
+    display: none;
+}
+
+.botao{
+    background-color: rgb(143, 160, 255);
+    border-radius: 10px;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-left:20px;
+}
+
+.informacao{
+    position: absolute;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding:10px;
+    width:400px;
+    height: auto;
+    cursor: pointer;
+    z-index: 1;
+}
+
+
+/* botao de cada um */
+#info1{
+    transition: 1s ease-in-out;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    background-color: rgb(255, 255, 255,0);
+    border: 2px solid rgb(0,0,0,0);
+    color:rgb(0,0,0,0);
+}
+
+#btn1:checked ~ #info1{
+    transition: 1s ease-in-out;
+    background-color: rgb(255, 255, 255,1);
+    border: 2px solid rgb(0,0,0,1);
+    width:400px;
+    height:auto;
+    margin-left:-200px;
+    margin-top: 100px;
+    color:rgb(0,0,0,1);
+}
+
+
+
+@media screen and (max-width: 730px) {
+    #info1{
+        margin-top: 10px !important;
+        margin-left: -130px !important; 
+    }
+    .botao{
+        margin-left: 0px;
+    }
 }
