--- a/assets/style.css
+++ b/assets/style.css
@@ -313,7 +313,26 @@ nav .logo{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+}
+.margem-ladoP{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.respBoxP{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: space-evenly;
+    padding:20px;
+}
+
+@media screen and (max-width: 650px) {
+    .contact-card{
+        width: 100%;
+        padding:0px;
+    }
 }
 
 .contact-card .card-image {
@@ -346,19 +365,6 @@ nav .logo{
 .contact-card .card-text p {
     font-size: 16px;
     margin-bottom: 10px;
-}
-
-
-
-@media screen and (min-width: 730px) {
-    .contact-card {
-        flex-direction: row;
-    }
-
-    .contact-card .card-image {
-        margin-bottom: 0px;
-        
-    }
 }
 
 .bold{
